[workspace]
members=[
    "crates/create_macos_webview",
    "crates/macos_webview",
    "crates/rs_oc_basic", 
    "crates/rs_oc_foundation", 
    "crates/rs_oc_core_graphics", 
    "crates/rs_oc_appkit", 
    "crates/rs_oc_webkit", 
    "crates/rs_oc_runtime",
]
exclude=["crates/create_macos_webview/node"]