[package]
name = "rs_oc_appKit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_oc_basic = { path = "../rs_oc_basic", version = "0.1.0" }
rs_oc_foundation = { path = "../rs_oc_foundation", version = "0.1.0" }
rs_oc_core_graphics = { path = "../rs_oc_core_graphics", version = "0.1.0" }