[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.10.3", default-features = false, features = ["napi4"] }
napi-derive = "2.9.3"
create_macos_webview = { path = ".." }

[build-dependencies]
napi-build = "2.0.1"

[workspace]